Rebrand site from Hiru's Turtle Vibe to Rumesh Diving Center
Updated all site content, titles, image alt texts, testimonials, and contact information to reflect the new name 'Rumesh Diving Center' instead of 'Hiru's Turtle Vibe'. Adjusted references in HTML, JavaScript, and image assets to ensure consistent branding across the website.

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Hiru's Turtle Vibe</title>
+    <title>About Us - Rumesh Diving Center</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/images/logo.jpg" alt="Hiru's Turtle Vibe Logo" class="logo">
+                <img src="assets/images/logo.jpg" alt="Rumesh Diving Center Logo" class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -63,20 +63,20 @@
                     <img src="https://images.unsplash.com/photo-1583212292454-1fe6229603b7?w=800" alt="Snorkeling Guide" class="img-fluid rounded-3 shadow">
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
-                    <h2 class="section-title mb-4">Meet Hiru</h2>
+                    <h2 class="section-title mb-4">Meet Rumesh</h2>
                     <p class="mb-4">
-                        Hiru's Turtle Vibe was born from a deep love for the ocean and a passion for sharing its magic with others. 
-                        Guided by Hiru, whose warm smile and sunny spirit light up every trip, we offer an authentic and ethical 
+                        Rumesh Diving Center was born from a deep love for the ocean and a passion for sharing its magic with others. 
+                        Guided by Rumesh, whose warm smile and sunny spirit light up every trip, we offer an authentic and ethical 
                         snorkeling experience in the beautiful coastal town of Thalaramba.
                     </p>
                     <p class="mb-4">
-                        With years of experience in marine conservation and tourism, Hiru has developed a unique approach that 
+                        With years of experience in marine conservation and tourism, Rumesh has developed a unique approach that 
                         prioritizes the wellbeing of sea turtles and the preservation of their natural habitat. Every interaction 
                         is carefully managed to ensure minimal impact while maximizing the joy and wonder of these encounters.
                     </p>
                     <p>
-                        What sets us apart is not just our expertise, but our genuine love for what we do. When you join Hiru's 
-                        Turtle Vibe, you're not just a tourist – you become part of our ocean-loving family.
+                        What sets us apart is not just our expertise, but our genuine love for what we do. When you join Rumesh 
+                        Diving Center, you're not just a tourist – you become part of our ocean-loving family.
                     </p>
                 </div>
             </div>
@@ -119,21 +119,21 @@
             <!-- Why Choose Us -->
             <div class="row mt-5 pt-5 bg-light-section rounded-3 p-5">
                 <div class="col-12 text-center mb-5">
-                    <h2 class="section-title">Why Choose Hiru's Turtle Vibe?</h2>
+                    <h2 class="section-title">Why Choose Rumesh Diving Center?</h2>
                 </div>
                 <div class="col-lg-6 mb-4" data-aos="fade-right">
                     <div class="why-choose-item">
                         <i class="fas fa-star text-primary"></i>
                         <div>
                             <h4>Local Expertise</h4>
-                            <p>As a local guide, Hiru knows the best spots and the perfect timing to encounter sea turtles safely.</p>
+                            <p>As a local guide, Rumesh knows the best spots and the perfect timing to encounter sea turtles safely.</p>
                         </div>
                     </div>
                     <div class="why-choose-item">
                         <i class="fas fa-heart text-primary"></i>
                         <div>
                             <h4>Passionate Guide</h4>
-                            <p>Hiru's genuine love for the ocean and its creatures creates an infectious enthusiasm that makes every trip special.</p>
+                            <p>Rumesh's genuine love for the ocean and its creatures creates an infectious enthusiasm that makes every trip special.</p>
                         </div>
                     </div>
                     <div class="why-choose-item">
@@ -176,7 +176,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center" data-aos="zoom-in">
-                    <h2 class="mb-4">Ready to Experience the Turtle Vibe?</h2>
+                    <h2 class="mb-4">Ready to Dive with Rumesh Diving Center?</h2>
                     <p class="lead mb-4">
                         Join us for an unforgettable adventure that combines natural beauty, ethical wildlife encounters, 
                         and the warmth of local hospitality.
@@ -193,7 +193,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-4 mb-lg-0">
-                    <img src="assets/images/logo.jpg" alt="Hiru's Turtle Vibe" class="footer-logo mb-3">
+                    <img src="assets/images/logo.jpg" alt="Rumesh Diving Center" class="footer-logo mb-3">
                     <p class="text-light-50">Experience the magic of snorkeling with sea turtles in Thalaramba's crystal-clear waters.</p>
                 </div>
                 <div class="col-lg-4 mb-4 mb-lg-0">
