--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gallery - Hiru's Turtle Vibe</title>
+    <title>Gallery - Rumesh Diving Center</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/images/logo.jpg" alt="Hiru's Turtle Vibe Logo" class="logo">
+                <img src="assets/images/logo.jpg" alt="Rumesh Diving Center Logo" class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -271,7 +271,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <p class="testimonial-text">"An absolutely magical experience! Hiru's passion for the turtles and the ocean is contagious. The turtles came so close, and the pancakes were delicious!"</p>
+                        <p class="testimonial-text">"An absolutely magical experience! Rumesh's passion for the turtles and the ocean is contagious. The turtles came so close, and the pancakes were delicious!"</p>
                         <div class="testimonial-author">
                             <strong>Sarah M.</strong>
                             <span>United Kingdom</span>
@@ -287,7 +287,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <p class="testimonial-text">"Best snorkeling experience in Sri Lanka! Hiru made us feel safe and comfortable throughout. Seeing the turtles in their natural habitat was unforgettable."</p>
+                        <p class="testimonial-text">"Best snorkeling experience in Sri Lanka! Rumesh made us feel safe and comfortable throughout. Seeing the turtles in their natural habitat was unforgettable."</p>
                         <div class="testimonial-author">
                             <strong>Michael & Lisa</strong>
                             <span>Australia</span>
@@ -303,7 +303,7 @@
                             <i class="fas fa-star"></i>
                             <i class="fas fa-star"></i>
                         </div>
-                        <p class="testimonial-text">"Perfect for families! Our kids loved every moment. Hiru was patient and made sure everyone felt comfortable. The ethical approach to wildlife is commendable."</p>
+                        <p class="testimonial-text">"Perfect for families! Our kids loved every moment. Rumesh was patient and made sure everyone felt comfortable. The ethical approach to wildlife is commendable."</p>
                         <div class="testimonial-author">
                             <strong>The Johnson Family</strong>
                             <span>USA</span>
@@ -320,7 +320,7 @@
             <div class="text-center mb-5">
                 <h2 class="section-title">Follow Our Journey</h2>
                 <p class="section-subtitle">
-                    <i class="fab fa-instagram"></i> @hirusturtlevibe
+                    <i class="fab fa-instagram"></i> @rumeshdivingcenter
                 </p>
                 <a href="#" class="btn btn-primary mt-3">
                     <i class="fab fa-instagram me-2"></i> Follow Us on Instagram
@@ -351,7 +351,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-4 mb-lg-0">
-                    <img src="assets/images/logo.jpg" alt="Hiru's Turtle Vibe" class="footer-logo mb-3">
+                    <img src="assets/images/logo.jpg" alt="Rumesh Diving Center" class="footer-logo mb-3">
                     <p class="text-light-50">Experience the magic of snorkeling with sea turtles in Thalaramba's crystal-clear waters.</p>
                 </div>
                 <div class="col-lg-4 mb-4 mb-lg-0">
