--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hiru's Turtle Vibe - Snorkeling Adventure in Thalaramba</title>
+    <title>Rumesh Diving Center - Snorkeling Adventure in Thalaramba</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -135,7 +135,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/images/logo.jpg" alt="Hiru's Turtle Vibe Logo" class="logo">
+                <img src="assets/images/logo.jpg" alt="Rumesh Diving Center Logo" class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -176,7 +176,7 @@
                     <div class="turtle-icon-large mb-4">
                         <i class="fas fa-water"></i>
                     </div>
-                    <h1 class="hero-title mb-4" data-aos="fade-up">HIRU'S TURTLE VIBE</h1>
+                    <h1 class="hero-title mb-4" data-aos="fade-up">RUMESH DIVING CENTER</h1>
                     <div class="hero-divider mb-4">
                         <span class="divider-line"></span>
                         <i class="fas fa-mask-snorkel mx-3"></i>
@@ -215,8 +215,8 @@
                 <div class="col-lg-6" data-aos="fade-left">
                     <h2 class="section-title mb-4">Discover the Magic of the Ocean</h2>
                     <p class="lead mb-4">
-                        Welcome to Hiru's Turtle Vibe, a snorkeling experience unlike any other in beautiful Thalaramba. 
-                        Guided by Hiru, whose warm smile and sunny spirit light up every trip, you'll explore crystal-clear, 
+                        Welcome to Rumesh Diving Center, a snorkeling experience unlike any other in beautiful Thalaramba. 
+                        Guided by Rumesh and a passionate local team whose warm smiles and sunny spirits light up every trip, you'll explore crystal-clear, 
                         azure waters where sea turtles, colorful fish, and vibrant coral await.
                     </p>
                     <div class="feature-list">
@@ -275,7 +275,7 @@
                             <i class="fas fa-heart"></i>
                         </div>
                         <h3>Local Guide Passion</h3>
-                        <p>Hiru's love for the ocean and dedication to ethical wildlife experiences shines through in every adventure.</p>
+                        <p>Rumesh and the Rumesh Diving Center crew share a deep love for the ocean and a dedication to ethical wildlife experiences that shines through in every adventure.</p>
                     </div>
                 </div>
             </div>
@@ -289,7 +289,7 @@
                 <div class="col-lg-8 text-center" data-aos="zoom-in">
                     <h2 class="mb-4">Ready for Your Turtle Adventure?</h2>
                     <p class="lead mb-4">
-                        Join Hiru's Turtle Vibe and feel the joy of connecting with nature, the ocean, 
+                        Join Rumesh Diving Center and feel the joy of connecting with nature, the ocean, 
                         and a local guide who truly loves what he does.
                     </p>
                     <a href="contact.html" class="btn btn-light btn-lg">Book Your Experience Today</a>
@@ -303,7 +303,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-4 mb-lg-0">
-                    <img src="assets/images/logo.jpg" alt="Hiru's Turtle Vibe" class="footer-logo mb-3">
+                    <img src="assets/images/logo.jpg" alt="Rumesh Diving Center" class="footer-logo mb-3">
                     <p class="text-light-50">Experience the magic of snorkeling with sea turtles in Thalaramba's crystal-clear waters.</p>
                 </div>
                 <div class="col-lg-4 mb-4 mb-lg-0">
