--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Hiru's Turtle Vibe</title>
+    <title>Contact - Rumesh Diving Center</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/images/logo.jpg" alt="Hiru's Turtle Vibe Logo" class="logo">
+                <img src="assets/images/logo.jpg" alt="Rumesh Diving Center Logo" class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -165,7 +165,7 @@
                             </div>
                             <div class="contact-details">
                                 <h5>Email</h5>
-                                <p><a href="mailto:info@hirusturtlevibe.com">info@hirusturtlevibe.com</a></p>
+                                <p><a href="mailto:info@rumeshdivingcenter.com">info@rumeshdivingcenter.com</a></p>
                             </div>
                         </div>
 
@@ -186,11 +186,11 @@
                             <div class="social-links-contact">
                                 <a href="#" class="social-link-contact">
                                     <i class="fab fa-instagram"></i>
-                                    <span>@hirusturtlevibe</span>
+                                    <span>@rumeshdivingcenter</span>
                                 </a>
                                 <a href="#" class="social-link-contact">
                                     <i class="fab fa-facebook"></i>
-                                    <span>Hiru's Turtle Vibe</span>
+                                    <span>Rumesh Diving Center</span>
                                 </a>
                                 <a href="#" class="social-link-contact">
                                     <i class="fab fa-whatsapp"></i>
@@ -215,7 +215,7 @@
                 <div class="col-12" data-aos="zoom-in">
                     <div class="map-wrapper">
                         <iframe 
-                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3968.413062608163!2d80.47912417572786!3d5.93766452969231!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae13fe5d7f4a2ed%3A0x616dc7d1ad84e95b!2sHiru&#39;s%20turtle%20vibe!5e0!3m2!1sen!2slk!4v1762422790393!5m2!1sen!2slk" 
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3968.413062608163!2d80.47912417572786!3d5.93766452969231!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3ae13fe5d7f4a2ed%3A0x616dc7d1ad84e95b!2sRumesh%20Diving%20Center!5e0!3m2!1sen!2slk!4v1762422790393!5m2!1sen!2slk" 
                             width="100%" 
                             height="450" 
                             style="border:0; border-radius: 15px;" 
@@ -247,7 +247,7 @@
                             </h3>
                             <div id="faq1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
                                 <div class="accordion-body">
-                                    Basic swimming skills are recommended, but not required. We provide life vests for those who need extra support, and Hiru stays close by throughout the experience to ensure everyone's safety.
+                                    Basic swimming skills are recommended, but not required. We provide life vests for those who need extra support, and Rumesh stays close by throughout the experience to ensure everyone's safety.
                                 </div>
                             </div>
                         </div>
@@ -331,7 +331,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-4 mb-lg-0">
-                    <img src="assets/images/logo.jpg" alt="Hiru's Turtle Vibe" class="footer-logo mb-3">
+                    <img src="assets/images/logo.jpg" alt="Rumesh Diving Center" class="footer-logo mb-3">
                     <p class="text-light-50">Experience the magic of snorkeling with sea turtles in Thalaramba's crystal-clear waters.</p>
                 </div>
                 <div class="col-lg-4 mb-4 mb-lg-0">
