--- a/packages.html
+++ b/packages.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Packages - Hiru's Turtle Vibe</title>
+    <title>Packages - Rumesh Diving Center</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="assets/css/style.css">
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg navbar-light fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="assets/images/logo.jpg" alt="Hiru's Turtle Vibe Logo" class="logo">
+                <img src="assets/images/logo.jpg" alt="Rumesh Diving Center Logo" class="logo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -321,7 +321,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 mb-4 mb-lg-0">
-                    <img src="assets/images/logo.jpg" alt="Hiru's Turtle Vibe" class="footer-logo mb-3">
+                    <img src="assets/images/logo.jpg" alt="Rumesh Diving Center" class="footer-logo mb-3">
                     <p class="text-light-50">Experience the magic of snorkeling with sea turtles in Thalaramba's crystal-clear waters.</p>
                 </div>
                 <div class="col-lg-4 mb-4 mb-lg-0">
